src/test/ui/async-await/issues/issue-62097.stderr
error: cannot infer an appropriate lifetime
  --> $DIR/issue-62097.rs:12:31
   |
LL |     pub async fn run_dummy_fn(&self) {
   |                               ^^^^^
   |                               |
   |                               data with this lifetime...
   |                               ...is captured here...
LL |         foo(|| self.bar()).await;
   |         --- ...and required to be `'static` by this

error: aborting due to previous error

